[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Yuji <g.yujinak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
psycopg2 = "^2.8"
djangorestframework = "^3.15.1"
django-rest-framework = "^0.1.0"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.4.2"
flake8 = "^7.0.0"
black = "^24.4.2"
gitpython = "^3.1.43"

[tool.poetry.group.dev.dependencies]
factory-boy = "^3.3.0"
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
